--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^4.7.1
   firebase_auth: ^4.6.1
   firebase_core: ^2.13.0
+  provider: ^6.0.5
   
 
 dev_dependencies:
