--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -39,6 +40,8 @@ dependencies:
   firebase_core: ^2.13.0
   provider: ^6.0.5
   uuid: ^3.0.7
+  intl: ^0.18.1
+  
   
 
 dev_dependencies:
